Fix spacing between search form and results with light theme

--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
@@ -1,9 +1,9 @@
 .programmes-results {
     $root: &;
-    padding-top: 0;
+    padding-top: $gutter;
 
     @include media-query(large) {
-        padding-top: $gutter * 2;
+        padding-top: $gutter * 3;
     }
 
     &__count {
