--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -55,15 +55,15 @@
     &--programmes {
         grid-column: 1 / span 2;
         max-width: 460px;
-        padding-bottom: $gutter * 2.5;
+        padding-bottom: $gutter * 1.5;
 
         @include media-query(medium) {
-            padding-bottom: $gutter * 5.5;
+            padding-bottom: $gutter * 4.5;
         }
 
         @include media-query(large) {
             grid-column: 2 / span 2;
-            padding-bottom: $gutter * 2;
+            padding-bottom: $gutter;
         }
     }
 }
